dont use Task in window